# Neural_Network_Quantum_State

./: .compile.sh  CB-train_fnn.cpp  CH-train_fnn.cpp  CH-train_rbm.cpp  CMakeLists.txt  ComplexRBM.hpp  ComplexRBM_nqs.hpp  FindTRNG4.cmake  README.md  SQ-train_fnn.cpp  TRI-replica_train_fnn.cpp  TRI-train_fnn.cpp  argparse.hpp  blas.hpp  blas_lapack.hpp  common.hpp  compile.sh  hamiltonians.hpp  impl_ComplexRBM.hpp  impl_ComplexRBM_nqs.hpp  impl_hamiltonians.hpp  impl_mcmc_sampler.hpp  impl_minresqlp.hpp  impl_neural_quantum_state.hpp  impl_optimization.hpp  impl_optimizer.hpp  linear_solver.hpp  main.cc  main.cpp  mcmc_sampler.hpp  meas_OI.cpp  meas_mag.cpp  meas_xmag.cpp  meas_zmag.cpp  measurements.hpp  minresqlp.hpp  neural_quantum_state.hpp  optimization.hpp  optimizer.hpp  setup.cfg  (+4 more)
cmake/: FindMAGMA.cmake  FindTRNG4.cmake
cpu/: CH-train_fnn.cpp  CH-train_fnnsfsymm.cpp  CH-train_fnntrsymm.cpp  CH-train_rbm.cpp  CH-train_rbmsfsymm.cpp  CH-train_rbmsymm.cpp  CH-train_rbmtrsymm.cpp  SQ-train_fnn.cpp  TRI-replica_train_fnn.cpp  argparse.hpp  common.hpp  fermi-hubbard-CH-fnn.cpp  fermi-hubbard-CH-rbm.cpp  functor_for_CG.hpp  hamiltonians.hpp  impl_hamiltonians.hpp  impl_mcmc_sampler.hpp  impl_minresqlp.hpp  impl_neural_quantum_state.hpp  kawasaki_updater.hpp  mcmc_sampler.hpp  meas_OI.cpp  neural_quantum_state.hpp  optimizer.hpp
cpu/cmake/: FindMKL.cmake
cpu/include/: argparse.hpp  common.hpp  conjugate_gradient.hpp  hamiltonians.hpp  impl_hamiltonians.hpp  impl_mcmc_sampler.hpp  impl_neural_quantum_state.hpp  impl_optimizer.hpp  kawasaki_updater.hpp  mcmc_sampler.hpp  measurements.hpp  neural_quantum_state.hpp
cpu/src/: CB-train_ffnn.cpp  CB-train_fnn.cpp  CH-train_ffnn.cpp  CH-train_ffnnsfsymm.cpp  CH-train_ffnntrsymm.cpp  CH-train_fnn.cpp  CH-train_fnnsfsymm.cpp  CH-train_fnntrsymm.cpp  CH-train_rbm.cpp  CH-train_rbmsfsymm.cpp  CH-train_rbmtrsymm.cpp  SQ-train_ffnn.cpp  SQ-train_fnn.cpp  TRI-train_ffnn.cpp  TRI-train_fnn.cpp  fermi-hubbard-CH-fnn.cpp  fermi-hubbard-CH-rbm.cpp  fermi_hubbard_CH-train_ffnn.cpp  fermi_hubbard_CH-train_rbm.cpp  meas_OI.cpp  meas_OI_ffnn.cpp  meas_xmag.cpp  meas_xmag_ffnn.cpp  meas_zmag.cpp  meas_zmag_ffnn.cpp
gpu/: .compile.sh  CB-train_fnn.cu  CH-train_fnn.cu  CH-train_rbm.cu  CH-train_rbmtrsymm.cu  LICH-train_fnntrsymm.cu  LICH-train_rbmtrsymm.cu  SQ-train_fnn.cu  common.cuh  conjugate_gradient.cuh  cublas_template.cuh  curand_wrapper.cuh  hamiltonians.cuh  impl_hamiltonians.cuh  impl_mcmc_sampler.cuh  impl_meas.cuh  impl_measurements.cuh  impl_neural_quantum_state.cuh  impl_optimizer.cuh  linear_solver.cuh  mcmc_sampler.cuh  meas.cuh  meas_OI.cu  meas_correlations.cu  meas_energy.cu  meas_fidelity.cu  meas_neel.cu  meas_renyi_entropy.cu  meas_smag.cu  meas_xmag.cu  meas_zmag.cu  measurements.cuh  neural_quantum_state.cuh  optimizer.cuh  thrust_util.cuh  trng4cuda.cuh
gpu/include/: functor_for_CG.cuh  hamiltonians.cuh  impl_hamiltonians.cuh  impl_kawasaki_updater.cuh  impl_meas.cuh  impl_neural_quantum_state.cuh  impl_optimizer.cuh  kawasaki_updater.cuh  linear_solver.cuh  mcmc_sampler.cuh  meas.cuh  neural_quantum_state.cuh  optimizer.cuh  thrust_util.cuh  trng4cuda.cuh
gpu/src/: CB-train_ffnn.cu  CB-train_fnn.cu  CH-train_ffnn.cu  CH-train_ffnntrsymm.cu  CH-train_fnn.cu  CH-train_fnntrsymm.cu  CH-train_rbm.cu  CH-train_rbmtrsymm.cu  LICH-train_ffnntrsymm.cu  LICH-train_fnntrsymm.cu  LICH-train_rbm.cu  LICH-train_rbmtrsymm.cu  LICH-train_rbmz2prsymm.cu  SQ-train_ffnn.cu  SQ-train_fnn.cu  fermi-hubbard-CH-rbm.cu  fermi_hubbard_CH-train_ffnn.cu  fermi_hubbard_CH-train_rbm.cu  meas_correlations.cu  meas_correlations_ffnn.cu  meas_correlations_rbmtrsymm.cu  meas_fidelity.cu  meas_fidelity_ffnn.cu  meas_fidelity_rbmtrsymm.cu  meas_renyi_entropy.cu  meas_renyi_entropy_ffnn.cu  meas_renyi_entropy_rbm.cu  meas_renyi_entropy_rbmtrsymm.cu  meas_renyi_entropy_rbmz2prsymm.cu  meas_smag.cu  meas_smag_ffnn.cu  meas_xx_correlations_rbmtrsymm.cu  meas_z4p_correlations_rbmtrsymm.cu  meas_zz_correlations_ffnn.cu  meas_zz_correlations_rbmtrsymm.cu  pywrapping_sampler.cu
python/: SR_LICH_rbmtrsymm.py  meas_fidelity.py  meas_renyi.py  meas_smag.py  miscellaneous_tools.py  mpi_run.py  xx_corr_rbmtrsymm.py  zz_corr_rbmtrsymm.py
python/pynqs/: SR_LICH_rbmtrsymm.py  __init__.py  sampler.py  xx_corr_rbmtrsymm.py  z4p_corr_rbmtrsymm.py  zz_corr_rbmtrsymm.py
